fix: disable iPad support to skip iPad screenshots

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "icon": "./assets/icon.png",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "com.jeontaeheon.sejul",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
